The uploadAdvertisement API works now.
