# src/main/java/org/openapitools/model/UploadRequest.java
@@ -1,0 +1,11 @@
+package org.openapitools.model;
+
+import lombok.Data;
+
+@Data
+public class UploadRequest {
+	private String bid;
+	private String bkod;
+	private Advertisement advertisement;
+	private Seller seller;
+}
